--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
 <hr>
 
 <h3>
-<a name="experience" class="anchor" href="#projects"><span class="octicon octicon-link"></span></a>PROJECTS</h3>
+<a name="experience" class="anchor" href="#projects"><span class="octicon octicon-link"></span></a>EXPERIENCE/PROJECTS</h3>
 <hr>
-
+<li>Developed Multiple Websites/Blogs using Adobe Dreamweaver</li>
+<li>Developed Game: Knight's Tale</li>
 <hr>
 
 <h3>
