--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
           <h1 id="project_title">Sean R. Brightman</h1>
           <h2 id="project_tagline">Online Resume</h2>
+          <h3 id="project_tagline">s.r.brightman@gmail.com</h3>
 
         </header>
     </div>
