--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
 <a name="experience" class="anchor" href="#projects"><span class="octicon octicon-link"></span></a>EXPERIENCE/PROJECTS</h3>
 <hr>
 <li>Developed Multiple Websites/Blogs using Adobe Dreamweaver</li>
-<li>Developed Game: Knight's Tale</li>
+<li>Projects can be found in Respository under my GitHub account.</li>
 <hr>
+
+<section id="downloads" class="clearfix">
+          <a href="https://github.com/seanbrightman" id="view-on-github" class="button"><span> View Repositories</span></a>
+        </section>
 
 <h3>
 <a name="skills" class="anchor" href="#skills"><span class="octicon octicon-link"></span></a>SKILLS</h3>
