--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
           <a id="forkme_banner" href="https://github.com/seanbrightman">View on GitHub</a>
 
           <h1 id="project_title">Sean R. Brightman</h1>
-          <h2 id="project_tagline">Online Resume</h2>
           <h4 id="project_tagline">s.r.brightman@gmail.com</h4>
 
         </header>
@@ -63,8 +62,7 @@
 <hr>
 
 <p><strong>Languages: </strong>Java, HTML/CSS/JQuery</p>
-<p><strong></strong></p>
-<p><strong>Systems: </strong>Windows, OSX , Android</p>
+<p><strong>Systems: </strong>Windows, OSX</p>
 <p><strong>Database: </strong>MySQL, SQLite</p>
       </section>
     </div>
