--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Untitled Document</title>
+
 <html>
 
   <head>
@@ -18,10 +24,69 @@
           <a id="forkme_banner" href="https://github.com/seanbrightman">View on GitHub</a>
 
           <h1 id="project_title">Sean R. Brightman</h1>
-          <h4 id="project_tagline">s.r.brightman@gmail.com</h4>
+          <h2 id="project_tagline1">Online Resume</h2>
+          <h4 id="project_tagline2">s.r.brightman@gmail.com</h4>
 
         </header>
     </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <hr>
+
+<h3>
+<a name="objective" class="anchor" href="#objective"><span class="octicon octicon-link"></span></a>OBJECTIVE</h3>
+<hr>
+<p>A Software Developer looking to improve my skills and use my experience to create different types of software for clients.</p>
+
+
+<h3>
+<a name="education" class="anchor" href="#education"><span class="octicon octicon-link"></span></a>EDUCATION</h3>
+
+<hr>
+
+<p><strong>B.S. Information Technology (Concentration in Software Development)</strong></p>
+<p>Georgia Gwinnett College</p>
+<p>Expected Graduation: Spring 2016</p>
+
+<hr>
+
+<h3>
+<a name="experience" class="anchor" href="#projects"><span class="octicon octicon-link"></span></a>EXPERIENCE/PROJECTS</h3>
+<hr>
+<li>Developed Multiple Websites/Blogs using Adobe Dreamweaver</li>
+<li>Projects can be found in Respository under my GitHub account.
+</li>
+<li><section id="downloads" class="clearfix">
+          <a href="https://github.com/seanbrightman" id="view-on-github" class="button"><span> View Repositories</span></a>
+        </section>
+</li>
+<hr>
+
+<h3>
+<a name="skills" class="anchor" href="#skills"><span class="octicon octicon-link"></span></a>SKILLS</h3>
+
+<hr>
+
+<p><strong>Languages: </strong>Java, HTML/CSS</p>
+<p><strong>Systems: </strong>Windows, Android, OSX</p>
+<p><strong>Database: </strong>MySQL, SQLite</p>
+<p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, GitHub;</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
@@ -61,8 +126,8 @@
 
 <hr>
 
-<p><strong>Languages: </strong>Java, HTML/CSS/JQuery</p>
-<p><strong>Systems: </strong>Windows, OSX</p>
+<p><strong>Languages: </strong>Java, HTML/CSS, JQuery</p>
+<p><strong>Systems: </strong>Windows, Android OSX</p>
 <p><strong>Database: </strong>MySQL, SQLite</p>
       </section>
     </div>
