--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <li>Developed Multiple Websites/Blogs using Adobe Dreamweaver</li>
 <li>Projects can be found in Respository under my GitHub account.
 </li>
-<li><section id="downloads" class="clearfix">
+<section id="downloads" class="clearfix">
           <a href="https://github.com/seanbrightman" id="view-on-github" class="button"><span> View Repositories</span></a>
         </section>
-</li>
+
 <hr>
 
 <h3>
@@ -72,7 +72,7 @@
 <p><strong>Languages: </strong>Java, HTML/CSS</p>
 <p><strong>Systems: </strong>Windows, Android, OSX</p>
 <p><strong>Database: </strong>MySQL, SQLite</p>
-<p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, GitHub;</p>
+<p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, GitHub</p>
       </section>
     </div>
 
