--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <p><strong>Languages: </strong>Java, HTML/CSS</p>
 <p><strong>Systems: </strong>Windows, Android, OSX</p>
 <p><strong>Database: </strong>MySQL, SQLite</p>
-<p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, GitHub</p>
+<p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, Adobe Dreamweaver, Adobe Muse, GitHub</p>
       </section>
     </div>
 
