--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <hr>
 
 <p><strong>B.S. Information Technology (Concentration in Software Development)</strong></p>
-<p>Georgia Gwinnett College</p>
+<a href="http://www.ggc.edu/ ">Georgia Gwinnett College</a>
 <p>Expected Graduation: Spring 2016</p>
 
 <hr>
