--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 <h3>
 <a name="experience" class="anchor" href="#projects"><span class="octicon octicon-link"></span></a>EXPERIENCE/PROJECTS</h3>
 <hr>
-<li>Developed Multiple Websites/Blogs using Adobe Dreamweaver</li>
-<li>Projects can be found in Respository under my GitHub account.
-</li>
+<li>Developed Multiple Websites/Blogs using Adobe Dreamweaver and Cloud9</li>
+<li>Developed Webapps using Ruby on Rails</li>
+<li>Projects can be found in Respository under my GitHub account.</li>
 <section id="downloads" class="clearfix">
           <a href="https://github.com/seanbrightman" id="view-on-github" class="button"><span> View Repositories</span></a>
         </section>
@@ -63,10 +63,10 @@
 
 <hr>
 
-<p><strong>Languages: </strong>Java, HTML/CSS</p>
+<p><strong>Languages: </strong>Java, HTML/CSS, Ruby on Rails</p>
 <p><strong>Systems: </strong>Windows, Android, OSX</p>
-<p><strong>Database: </strong>MySQL, SQLite</p>
-<p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, Adobe Dreamweaver, Adobe Muse, GitHub</p>
+<p><strong>Database: </strong>MySQL, SQLite, Postgresql</p>
+<p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, Adobe Dreamweaver, Adobe Muse, GitHub, Cloud9</p>
       </section>
     </div>
 
