--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <hr>
 
 <p><strong>Languages: </strong>Java, HTML/CSS, Ruby on Rails</p>
-<p><strong>Systems: </strong>Windows, Android, iOS</p>
-<p><strong>Database: </strong>MySQL, SQLite, Postgresql</p>
+<p><strong>Systems: </strong>Windows, Android</p>
+<p><strong>Database: </strong>MySQL</p>
 <p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, Adobe Dreamweaver, Adobe Muse, GitHub, Cloud9</p>
       </section>
     </div>
