--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <p><strong>Languages: </strong>Java, HTML/CSS, Ruby on Rails</p>
 <p><strong>Systems: </strong>Windows, Android</p>
 <p><strong>Database: </strong>MySQL</p>
-<p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, Adobe Dreamweaver, Adobe Muse, GitHub, Cloud9</p>
+<p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, Adobe Dreamweaver, Adobe Muse</p>
       </section>
     </div>
 
