--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <a name="experience" class="anchor" href="#projects"><span class="octicon octicon-link"></span></a>EXPERIENCE/PROJECTS</h3>
 <hr>
 <li>Developed Multiple Websites/Blogs using Adobe Dreamweaver and Cloud9</li>
-<li>Developed Webapps using Ruby on Rails</li>
+<li>Assisted with developing a private inventory management app to keep track of warehouse supplies.</li>
 <li>Projects can be found in Respository under my GitHub account.</li>
 <section id="downloads" class="clearfix">
           <a href="https://github.com/seanbrightman" id="view-on-github" class="button"><span> View Repositories</span></a>
