--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3>
 <a name="experience" class="anchor" href="#projects"><span class="octicon octicon-link"></span></a>EXPERIENCE/PROJECTS</h3>
 <hr>
-<li>Developed Multiple Websites/Blogs using Adobe Dreamweaver and Cloud9</li>
+<li>Developed Multiple Websites/Blogs using Adobe Dreamweaver</li>
 <li>Assisted with developing a private inventory management app to keep track of warehouse supplies.</li>
 <li>Projects can be found in Respository under my GitHub account.</li>
 <section id="downloads" class="clearfix">
