--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
 <h3>
 <a name="experience" class="anchor" href="#projects"><span class="octicon octicon-link"></span></a>Projects
 </h3>
-<a href="http://thetoddlerfoodies.com/ ">The Toddler Foodies </a>
+<a href="http://thetoddlerfoodies.com/ "> The Toddler Foodies </a>
+<a href="http://ssdmfg.com/ "> Solid Solutions Design, LLC </a>
+<a href="http://lauraburchfieldevents.com/ "> Laura Burchfield Events </a>
+<a href="http://onefourstudios.com/ "> One Four Studios </a>
 
 
 
@@ -73,7 +76,7 @@
 
 <p><strong>Languages: </strong>Java, HTML/CSS, Ruby on Rails</p>
 <p><strong>Systems: </strong>Windows, Android</p>
-<p><strong>Database: </strong>MySQL</p>
+<p><strong>Database: </strong>MySQL, PostgreSQL</p>
 <p><strong>Other Skills: </strong>Adobe Photoshop, Adobe Illustrator, Adobe Dreamweaver, Adobe Muse</p>
       </section>
     </div>
