--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p><strong>B.S. Information Technology (Concentration in Software Development)</strong></p>
 <a href="http://www.ggc.edu/ ">Georgia Gwinnett College</a>
-<p>Expected Graduation: Fall 2016</p>
+<p>Expected Graduation: Spring 2017</p>
 
 <hr>
 
