--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 </h3>
 <hr>
 <li>Developed Multiple Websites/Blogs using Adobe Dreamweaver</li>
+<li>Worked with teams to develop android apps such as indoor navigation for the GGC campus</li>
 <li>Assisted with developing a private inventory management app to keep track of warehouse supplies.</li>
+<li>worked on a variety of android apps individually and am currently learning Swift.</li>
 <li>Projects can be found in Respository under my GitHub account.</li>
 <section id="downloads" class="clearfix">
           <a href="https://github.com/seanbrightman" id="view-on-github" class="button"><span> View Repositories</span></a>
